feat: add roles and gin optimization
